--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
             app:layout_constraintVertical_bias="0.5" />
 
         <ImageView
+            android:id="@+id/btn_search"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/icon_search"
