--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -44,36 +44,37 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="#F9F9F9"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.1"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1.1"
             android:background="@drawable/round_box"
-            android:orientation="vertical"
-            android:elevation="8dp">
+            android:elevation="8dp"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="4"
-                android:text="히라가나  ひらがな"
                 android:fontFamily="@font/godo"
-                android:textStyle="italic"
-                android:textColor="@color/theme"
                 android:gravity="center"
+                android:text="히라가나  ひらがな"
+                android:textColor="@color/theme"
                 android:textSize="30dp"
-                />
+                android:textStyle="italic" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:background="#EEEEEE"
-                />
+                android:background="#EEEEEE" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -81,25 +82,25 @@
                 android:orientation="horizontal"
 
                 >
+
                 <ImageView
                     android:id="@+id/btn_hiragana_study"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:src="@drawable/btn_hiragana_study"
-                    android:layout_marginRight="3dp"
                     android:layout_marginLeft="15dp"
+                    android:layout_marginRight="3dp"
+                    android:layout_weight="1"
                     android:elevation="5dp"
-                    />
+                    android:src="@drawable/btn_hiragana_study" />
+
                 <ImageView
                     android:id="@+id/btn_hiragana_test"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:src="@drawable/btn_hiragana_test"
                     android:layout_marginLeft="3dp"
                     android:layout_marginRight="15dp"
-                    />
+                    android:layout_weight="1"
+                    android:src="@drawable/btn_hiragana_test" />
             </LinearLayout>
 
         </LinearLayout>
@@ -107,29 +108,32 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.1"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
+            android:layout_weight="1.1"
             android:background="@drawable/round_box"
-            android:orientation="vertical"
-            android:elevation="8dp">
+            android:elevation="8dp"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="4"
-                android:text="가타카나  カタカナ"
                 android:fontFamily="@font/godo"
-                android:textStyle="italic"
-                android:textColor="@color/theme"
                 android:gravity="center"
-                android:textSize="30dp"/>
+                android:text="가타카나  カタカナ"
+                android:textColor="@color/theme"
+                android:textSize="30dp"
+                android:textStyle="italic" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:background="#EEEEEE"/>
+                android:background="#EEEEEE" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -137,42 +141,41 @@
                 android:orientation="horizontal"
 
                 >
+
                 <ImageView
                     android:id="@+id/btn_gatakana_study"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:src="@drawable/btn_gatakana_study"
-                    android:layout_marginRight="3dp"
                     android:layout_marginLeft="15dp"
+                    android:layout_marginRight="3dp"
+                    android:layout_weight="1"
                     android:elevation="5dp"
-                    />
+                    android:src="@drawable/btn_gatakana_study" />
+
                 <ImageView
                     android:id="@+id/btn_gatakana_test"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:src="@drawable/btn_gatakana_test"
                     android:layout_marginLeft="3dp"
                     android:layout_marginRight="15dp"
-                    />
+                    android:layout_weight="1"
+                    android:src="@drawable/btn_gatakana_test" />
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.25"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
+            android:layout_weight="1.25"
             android:background="@drawable/round_box"
-            android:orientation="vertical"
-            android:elevation="8dp">
+            android:elevation="8dp"
+            android:orientation="vertical">
 
         </LinearLayout>
     </LinearLayout>
-
 
 
 </LinearLayout>
