--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudyActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".StudyActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,6 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/btn_backHome"
             android:layout_width="58dp"
             android:layout_height="58dp"
             android:src="@drawable/icon_back"
@@ -22,7 +23,7 @@
             app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5"/>
+            app:layout_constraintVertical_bias="0.5" />
 
         <ImageView
             android:layout_width="200dp"
@@ -36,6 +37,7 @@
             app:layout_constraintVertical_bias="0.5" />
 
         <ImageView
+            android:id="@+id/btn_search"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/icon_search"
@@ -59,130 +61,135 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="4"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_weight="4"
             android:background="@drawable/round_box"
-            android:orientation="vertical"
-            android:elevation="8dp">
+            android:elevation="8dp"
+            android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_original"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:fontFamily="@font/noto_jp"
-                android:text="え"
-                android:textColor="#292929"
-                android:textSize="270dp"
                 android:gravity="center"
                 android:includeFontPadding="false"
-                android:layout_gravity="center"/>
+                android:text="え"
+                android:textColor="#292929"
+                android:textSize="270dp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="5"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_weight="5"
             android:background="@drawable/round_box3"
-            android:orientation="vertical"
-            android:elevation="8dp">
+            android:elevation="8dp"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="4"
+                android:fontFamily="@font/godo"
+                android:gravity="center"
                 android:text="정확한 일본어 발음을 선택하세요"
                 android:textColor="@color/theme"
-                android:fontFamily="@font/godo"
-                android:textSize="23dp"
-                android:gravity="center"/>
+                android:textSize="23dp" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:background="#EEEEEE"
-                />
+                android:background="#EEEEEE" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:orientation="horizontal">
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_option1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/study_base"
-                    android:elevation="5dp"
-                    android:text="마"
-                    android:textColor="@color/theme"
-                    android:fontFamily="@font/godo"
-                    android:textSize="70dp"
-                    android:gravity="center"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="15dp"
+                    android:layout_marginRight="8dp"
                     android:layout_marginBottom="15dp"
-                    android:layout_marginRight="8dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@drawable/study_base"
-                    android:text="소"
-                    android:textColor="@color/theme"
-                    android:fontFamily="@font/godo"
-                    android:textSize="70dp"
-                    android:gravity="center"
                     android:elevation="5dp"
+                    android:fontFamily="@font/godo"
+                    android:gravity="center"
+                    android:text="마"
+                    android:textColor="@color/theme"
+                    android:textSize="70dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_option2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="15dp"
+                    android:layout_marginRight="15dp"
                     android:layout_marginBottom="15dp"
-                    android:layout_marginRight="15dp"/>
+                    android:layout_weight="1"
+                    android:background="@drawable/study_base"
+                    android:elevation="5dp"
+                    android:fontFamily="@font/godo"
+                    android:gravity="center"
+                    android:text="소"
+                    android:textColor="@color/theme"
+                    android:textSize="70dp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:orientation="horizontal"
                 android:layout_marginBottom="15dp"
-                >
+                android:layout_weight="3"
+                android:orientation="horizontal">
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_option3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="15dp"
                     android:layout_weight="1"
                     android:background="@drawable/study_base"
                     android:elevation="5dp"
+                    android:fontFamily="@font/godo"
+                    android:gravity="center"
                     android:text="에"
                     android:textColor="@color/theme"
-                    android:fontFamily="@font/godo"
-                    android:textSize="70dp"
-                    android:gravity="center"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginRight="8dp"/>
+                    android:textSize="70dp" />
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_option4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginBottom="15dp"
                     android:layout_weight="1"
                     android:background="@drawable/study_base"
+                    android:elevation="5dp"
+                    android:fontFamily="@font/godo"
+                    android:gravity="center"
                     android:text="츠"
                     android:textColor="@color/theme"
-                    android:fontFamily="@font/godo"
-                    android:textSize="70dp"
-                    android:gravity="center"
-                    android:elevation="5dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginRight="15dp"
-                    />
+                    android:textSize="70dp" />
             </LinearLayout>
 
         </LinearLayout>
