--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="7.8"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#ffffff">
 
         <ImageView
             android:id="@+id/btn_backHome"
