--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -11,8 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="7.8"
-        android:orientation="horizontal">
-
+        android:orientation="horizontal"
+        android:background="#ffffff">
         <ImageView
             android:id="@+id/btn_backHome"
             android:layout_width="58dp"
@@ -133,9 +133,9 @@
                     android:id="@+id/tv_target2"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginTop="15dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginRight="15dp"
                     android:layout_marginBottom="15dp"
                     android:background="@drawable/test_correct"
                     android:elevation="5dp"
@@ -174,7 +174,6 @@
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_marginRight="17dp"
-                    android:layout_marginBottom="15dp"
                     android:background="@drawable/test_unresolved"
                     android:elevation="5dp"
                     android:fontFamily="@font/godo"
@@ -187,7 +186,6 @@
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_marginLeft="18dp"
-                    android:layout_marginBottom="15dp"
                     android:background="@drawable/test_unresolved"
                     android:elevation="5dp"
                     android:fontFamily="@font/godo"
