--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.Aragada" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#FFFFFF</item>
-        <item name="colorPrimaryVariant">#FFFFFF</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">#B8E6E1</item>
+        <item name="colorPrimaryVariant">#ffffff</item>
+        <item name="colorOnPrimary">#B8E6E1</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#FFFFFF</item>
-        <item name="colorSecondaryVariant">#FFFFFF</item>
+        <item name="colorSecondary">#B8E6E1</item>
+        <item name="colorSecondaryVariant">#B8E6E1</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -18,7 +19,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">#B8E6E1</item>
         <item name="colorPrimaryVariant">#B8E6E1</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">#B8E6E1</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">#B8E6E1</item>
         <item name="colorSecondaryVariant">#B8E6E1</item>
