--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -174,7 +174,31 @@
             android:background="@drawable/round_box"
             android:elevation="8dp"
             android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2.8"
+                android:fontFamily="@font/godo"
+                android:gravity="center"
+                android:text="Mr.다아라와 대화하기"
+                android:textColor="@color/theme"
+                android:textSize="28dp"
+                android:textStyle="italic" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="#EEEEEE" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                >
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
