번역 기능 및 아라가다 최종완성

--- a/app/src/main/res/layout/chat_daara.xml
+++ b/app/src/main/res/layout/chat_daara.xml
@@ -82,6 +82,7 @@
         </LinearLayout>
 
         <ImageButton
+            android:id="@+id/translate"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:background="@drawable/icon_translate"
